--- a/templates/viewPrivatecomments.html.twig
+++ b/templates/viewPrivatecomments.html.twig
@@ -9,7 +9,7 @@
 {# ------------------------------------------------- #}
 {% block main %}
 
-    <div id="one" style=width:90%;>
+    <div="viewmessages">
 
     <hr>
     
