--- a/templates/viewcomments.html.twig
+++ b/templates/viewcomments.html.twig
@@ -13,7 +13,7 @@
 <h1>VIEW COMMENTS </h1>
 	
 <section>
-    <div id="one">
+    <div id="viewmessages">
 {% for message in messages %}
     <hr>
     
