--- a/templates/Privatecomments.html.twig
+++ b/templates/Privatecomments.html.twig
@@ -11,36 +11,36 @@
 
 
 
-	<h1>Post a comment About CV's to a user</h1>
+    <h1>Post a comment About CV's to a user</h1>
 
 
-<fieldset>
-    <legend>Send us a message to say hi!</legend>
+    <fieldset>
+        <legend>Send us a private message to a student</legend>
 
-    <form
-            method="post"
-            action="/processPrivateMessageForm"
-    >
+        <form
+                method="post"
+                action="/processPrivateMessageForm"
+        >
 
-        <p>
-            Your message:
-            <br>
-            <textarea name="text" cols="40" rows="5" required ></textarea>
-        </p>
+            <p>
+                Your message:
+                <br>
+                <textarea name="text" cols="40" rows="5" required></textarea>
+            </p>
 
-        <p>
-            Your name:
-            <br>
-            <input type="text" name="user" required >
-        </p>
+            <p>
+                Your name:
+                <br>
+                <input type="text" name="user" required>
+            </p>
 
-        <input type="text" name="reciver" value="{{id }}">
+            <input type="hidden" name="reciver" value="{{ id }}">
 
-        <p>
-            <input type="submit" value="send private message">
-        </p>
+            <p>
+                <input type="submit" value="send private message">
+            </p>
 
-    </form>
-</fieldset>
+        </form>
+    </fieldset>
 
 {% endblock %}
