--- a/templates/comments.html.twig
+++ b/templates/comments.html.twig
@@ -9,38 +9,36 @@
 {# ------------------------------------------------- #}
 {% block main %}
 
+    <h1>Post a comment About CV's</h1>
 
 
-	<h1>Post a comment About CV's</h1>
+    <fieldset>
+        <legend>Post general comment to all students</legend>
 
+        <form
+                method="post"
+                action="/processMessageForm"
+        >
 
-<fieldset>
-    <legend>Send us a message to say hi!</legend>
+            <p>
+                Your message:
+                <br>
+                <textarea name="text" cols="40" rows="5" required>{{ message.text }}</textarea>
+            </p>
 
-    <form
-            method="post"
-            action="/processMessageForm"
-    >
+            <p>
+                Your name:
+                <br>
+                <input type="text" name="user" required value="{{ message.user }}">
+            </p>
 
-        <p>
-            Your message:
-            <br>
-            <textarea name="text" cols="40" rows="5" required >{{ message.text }}</textarea>
-        </p>
+            <input type="hidden" name="id" value="{{ message.id }}">
 
-        <p>
-            Your name:
-            <br>
-            <input type="text" name="user" required value="{{ message.user }}">
-        </p>
+            <p>
+                <input type="submit" value="send message">
+            </p>
 
-        <input type="hidden" name="id" value="{{ message.id }}">
-
-        <p>
-            <input type="submit" value="send message">
-        </p>
-
-    </form>
-</fieldset>
+        </form>
+    </fieldset>
 
 {% endblock %}
