--- a/templates/error404.html.twig
+++ b/templates/error404.html.twig
@@ -1,5 +1,3 @@
-
-
 {% extends '_base.html.twig' %}
 
 {# ------------------------------------------------- #}
@@ -11,25 +9,25 @@
 {# ------------------------------------------------- #}
 {% block main %}
 
-	
-	<h1>Whoops!</h1>
-	
-	<p class="error" style=color:red;background-color:skyblue;>
-	    {% for users in users%}
-	    {{users.role}}
-	    {% endfor %}
-	    <img  src="images/404.jpg" style="margin-left:30%">
-	    
-	    {% if users.role0 != 1 %}
-	        Kenny is sick.
-	    {% elseif kenny.dead %}
-	        You killed Kenny! You bastard!!!
-	    {% else %}
-	        Kenny looks okay --- so far
-{% endif %}
 
-	</p>
-	
+    <h1>Whoops!</h1>
 
-	
+    <p class="error" style=color:red;background-color:skyblue;>
+        {% for users in users %}
+            {{ users.role }}
+        {% endfor %}
+        <img src="images/404.jpg" style="margin-left:30%">
+
+        {% if users.role0 != 1 %}
+            Kenny is sick.
+        {% elseif kenny.dead %}
+            Kenny died
+        {% else %}
+            Kenny looks okay --- so far
+        {% endif %}
+
+    </p>
+
+
+
 {% endblock %}
