--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -10,71 +10,45 @@
 {% block main %}
 
 
-<!-- start table for displaying DVD details -->
-<div class="main-content">
-		<section>
-		    <div id="one">
-		    	<h1> Login Page</h1>
-		    	<?php echo $error; ?>
-			        
-			      <form
-			          action="/processLogin"
-			          method="post"
-			          >
-			      
-			          <p>
-			              username:
-			              <input type="text" name="username">
-			          </p>
-			      
-			          <p>
-			              password:
-			              <input type="text" name="password">
-			              
-			          </p>
-			          <p>
-			          	{{ message }}
-			          </p>
-			      
-			          <input type="submit" value="login">
-			      
-</form>
-		    </div>
-		    <div id="two">
-		    	<img src="images/job.jpg">
-		    
-		    </div>
-		</section>
-			
-	</div>
-	
 
-{% for message in messages %}
-    <hr>
-    <p>
-        posted by <strong>{{ message.user }}</strong>
-        <br>
-        {{ message.timestamp|date("l jS M h:i:s A")  }}
-    </p>
+    <div class="main-content">
+        <section>
+            <div id="one">
+                <h1> Login Page</h1>
+                <?php echo $error; ?>
 
-    <blockquote>
-        {{ message.text }}
-    </blockquote>
+                <form
+                        action="/processLogin"
+                        method="post"
+                >
 
-    <form
-        action="?action=deleteMessage&id={{ message.id }}"
-        method="post">
-        <input type="submit" value="(delete)">
-    </form>
+                    <p>
+                        username:
+                        <input type="text" name="username">
+                    </p>
 
-    <form
-            action="?action=editMessage&id={{ message.id }}"
-            method="post">
-        <input type="submit" value="(edit)">
-    </form>
+                    <p>
+                        password:
+                        <input type="password" name="password">
 
-{% else %}
-    <p>(no messages found)</p>
-{% endfor %}
+                    </p>
+                    <p>
+                        {{ message }}
+                    </p>
+
+                    <input type="submit" value="login">
+
+                </form>
+            </div>
+            <div id="two">
+                <img src="images/job.jpg">
+
+            </div>
+        </section>
+
+    </div>
+
+
+
 
 {% endblock %}
