--- a/templates/emloyer.html.twig
+++ b/templates/emloyer.html.twig
@@ -19,7 +19,7 @@
     {% endif %}
     
 
-    
+  <div id="viewmessages">  
 
 
 
@@ -30,15 +30,12 @@
         <th> Surname </th>
         <th> Age </th>
         <th> Position Applied for </th>
+        <th> Download </th>
        
         
     </tr>
 
-    <!-- ********************* HTML for dvd items ****************** -->
-<!--
-    //   	0 - 15 - 40 - 55 - 70 - 85 - 100 %age
-    // 	      .5   1    2    3    4    5     stars
--->
+
 
 {% for dvd in dvds %}
     <tr>
@@ -49,17 +46,14 @@
         <td>{{ dvd.position }}</td>
         
         <td>
-        	<form
-				        action="/downloadCV&{{ dvd.id }}}"
-				        method="get">
-				        <input type="submit" value="Download cv">
-	</form>
-    </td>
+         <form
+		        action="/downloadCV&{{ dvd.id }}}"
+		        method="get">
+		        <input type="submit" value="Download cv">
+	 </form>
+        </td>
 	
-
-        
-
-    </tr>
+    </tr></div>
 {% endfor %}
 
 </table>
