--- a/templates/emloyer.html.twig
+++ b/templates/emloyer.html.twig
@@ -10,20 +10,11 @@
 {# ------------------------------------------------- #}
 {% block main %}
 
-<!-- start table for displaying DVD details -->
+
 <h2>ALL applicants </h2>
 
-    {# -------- offer button to clear the search,. if a search term is present -------- #}
-    {% if searchText %}
-        <a href="?action=list">(reset search)</a>
-    {% endif %}
-    
 
-  <div id="viewmessages">  
-
-
-
-    <table>
+    <table style="margin-top:-10%">
     <tr>
         <th> ID </th>
         <th> First-name </th>
@@ -38,27 +29,23 @@
 
 
 {% for dvd in dvds %}
-    <tr>
-        <td>{{ dvd.id }}</td>
-        <td>{{ dvd.first }}</td>
-        <td>{{ dvd.surname}}</td>
-        <td>{{ dvd.age }}</td>
-        <td>{{ dvd.position }}</td>
-        
-        <td>
-        	<form
-				        action="/downloadCV&{{ dvd.id }}}"
-				        method="get">
-				        <input type="submit" value="Download cv">
-	</form>
-    </td>
-	
+	    <tr>
+	        <td>{{ dvd.id }}</td>
+	        <td>{{ dvd.first }}</td>
+	        <td>{{ dvd.surname}}</td>
+	        <td>{{ dvd.age }}</td>
+	        <td>{{ dvd.position }}</td>
+	        
+		    <td>
+		       	<form
+			        action="/downloadCV&{{ dvd.id }}}"
+			        method="get">
+			        <input type="submit" value="Download cv">
+			</form>
+		    </td>
+	    </tr>
+	{% endfor %}
 
-        
-
-    </tr></div>
-{% endfor %}
-
-</table>
-
+	</table>
+  
 {% endblock %}
